# peso

./: .gitignore  Makefile  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  cleanup.yml  data.yml  deploy.yml  python.yml
data/: series.v1.json
docs/: metodologia.md
pipeline/: __init__.py  artifact_check.py  build.py  config.py  fetch.py  load.py  splice.py  validate.py
tests/: conftest.py  test_artifact_check.py  test_build.py  test_config.py  test_fetch.py  test_load.py  test_splice.py  test_validate.py
web/: index.html  package-lock.json  package.json  vitest.config.ts
web/public/: _headers  series.v1.json
web/src/: charts.ts  format.ts  inflation.ts  main.ts  styles.css  types.ts  usd.ts
web/test/: charts.test.ts  fixture.ts  format.test.ts  inflation.test.ts  main.test.ts  setup.ts  usd.test.ts
