[project]
name = "peso"
version = "0.1.0"
description = "What is X pesos from year Y worth today? — Argentine inflation & purchasing power from spliced INDEC/BCRA data"
readme = "README.md"
license = "MIT"
authors = [{ name = "Lucas Daddiego" }]
requires-python = ">=3.14,<3.15"
# The pipeline is deliberately standard-library only (json, csv, urllib, datetime, …) — no runtime deps.
dependencies = []

[project.urls]
Repository = "https://github.com/lucasdaddiego/peso"

# This is an application, not a distributable package — don't try to build it.
[tool.uv]
package = false

# Dev-only tooling (tests, lint, types). Installed by `uv sync`; not part of the app runtime.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

# --------------------------------------------------------------------------------------
# Tests + coverage. The pipeline is the trustworthy spine (it must reproduce INDEC/BCRA),
# so the gate is a hard 100% (statements AND branches) over `pipeline/`. Tests run against
# tiny synthetic series (tests/conftest.py), never the real fetched data.
# --------------------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"

[tool.coverage.run]
branch = true
source = ["pipeline"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

# --------------------------------------------------------------------------------------
# Lint + format (ruff) and types (mypy).
# --------------------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "BLE", "RUF"]
# RUF001/002/003 flag "ambiguous" Unicode (× – etc.) — those are intentional typography in the
# Spanish UI/data strings, not confusables to fix. Keep the rest of RUF.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# config.py is reference data: long cited strings don't wrap meaningfully.
"pipeline/config.py" = ["E501"]
# tests lean on fixtures/monkeypatch; allow the usual test-shaped patterns.
"tests/*" = ["E501", "B011"]

[tool.mypy]
python_version = "3.14"
files = ["pipeline"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
